update to dark.. for now

--- a/src/pages/maillist.astro
+++ b/src/pages/maillist.astro
@@ -17,7 +17,7 @@ import SubscribeForm from "../components/SubscribeForm";
     <title>stephangriesel.com</title>
   </head>
   <body>
-    <section class="grid place-items-center min-h-screen">
+    <section class="grid place-items-center min-h-screen bg-black text-white">
       <div class="grid gap-4">
         <h1>List</h1>
         <SubscribeForm client:visible />
