--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@
     />
     <title>stephangriesel.com</title>
   </head>
-  <body>
+  <body class="grid place-items-center min-h-screen bg-black text-white">
     <section class="grid place-items-center min-h-screen">
       <h1>stephangriesel.com</h1>
       <div>
