--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,15 @@
 ---
+import SocialLinks from "../components/SocialLinks.astro";
+import Title from "../components/Title.astro";
 
+const data = [
+  { name: "Facebook", icon: "", link: "" },
+  { name: "Instagram", icon: "", link: "" },
+  { name: "X", icon: "", link: "" },
+  { name: "LinkedIn", icon: "fab fa-linkedin fa-2x", link: "" },
+  { name: "BeReal", icon: "", link: "" },
+  { name: "GitHub", icon: "fab fa-github fa-2x", link: "" },
+];
 ---
 
 <html lang="en">
@@ -20,18 +30,10 @@
     <section class="grid place-items-center min-h-screen">
       <h1>stephangriesel.com</h1>
       <div>
-        <ul class="flex">
-          <li>
-            <a href="https://www.linkedin.com/in/stephangriesel/">
-              <i class="fab fa-linkedin fa-2x"></i>
-            </a>
-          </li>
-          <li>
-            <a href="https://github.com/stephangriesel">
-              <i class="fab fa-github fa-2x"></i>
-            </a>
-          </li>
-        </ul>
+        <div>
+          <Title />
+          {data.map((i) => <SocialLinks data={i} />)}
+        </div>
       </div>
       <footer>
         &copy;
