add real data, update fontawesome cdn version

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,14 +2,20 @@
 import SocialLinks from "../components/SocialLinks.astro";
 import Title from "../components/Title.astro";
 
-const data = [
-  { name: "Facebook", icon: "", link: "" },
-  { name: "Instagram", icon: "", link: "" },
-  { name: "X", icon: "", link: "" },
-  { name: "LinkedIn", icon: "fab fa-linkedin fa-2x", link: "" },
-  { name: "BeReal", icon: "", link: "" },
-  { name: "GitHub", icon: "fab fa-github fa-2x", link: "" },
-];
+// FAKE DATA
+// const data = [
+//   { name: "Facebook", icon: "", link: "" },
+//   { name: "Instagram", icon: "", link: "" },
+//   { name: "X", icon: "", link: "" },
+//   { name: "LinkedIn", icon: "fab fa-linkedin fa-2x", link: "" },
+//   { name: "BeReal", icon: "", link: "" },
+//   { name: "GitHub", icon: "fab fa-github fa-2x", link: "" },
+// ];
+
+const res = await fetch(
+  "https://script.googleusercontent.com/macros/echo?user_content_key=_mXCeTEcLbFdSdroVa2IsaacOEGh7AzAATkdWj8vIO8fVC94ZbOHa0o_MtODaUb7YIyDH1PV9RJsaZUu6z0kkCQa8zXKmhdPm5_BxDlH2jW0nuo2oDemN9CCS2h10ox_1xSncGQajx_ryfhECjZEnC1ixgh57tvSFfnAy_blXMmcuqlo4dqkRWkH13qgt5DXM3f-xz7Rzll8eVtMuatKK1yVEAXvOEUYly8Ezkc7Pge8VLwpL94jndz9Jw9Md8uu&lib=MIFVEDuvwu8ejhImpgUwZl6wxUxgqwiu9"
+);
+const { data } = await res.json();
 ---
 
 <html lang="en">
@@ -20,9 +26,10 @@ const data = [
     <meta name="generator" content={Astro.generator} />
     <link
       rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-      integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
       crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <title>stephangriesel.com</title>
   </head>
