--- a/src/components/SocialLinks.astro
+++ b/src/components/SocialLinks.astro
@@ -4,18 +4,17 @@ type Props = {
     name: string;
     icon: string;
     link: string;
+    status: string;
   };
 };
 
 const { data } = Astro.props;
 ---
 
-<div>
-  <ul class="flex">
-    <li>
-      <a href={data.link}>
-        <i class={data.icon}></i>
-      </a>
-    </li>
-  </ul>
-</div>
+<ul>
+  <li class="p-1">
+    <a href={data.link}>
+      <i class={data.icon}></i>
+    </a>
+  </li>
+</ul>
