--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,13 +37,12 @@ const { data } = await res.json();
   </head>
   <body class="grid place-items-center min-h-screen bg-black text-white">
     <section class="grid place-items-center min-h-screen">
-      <h1>stephangriesel.com</h1>
+      <h1>{data.map((i) => <Title data={i} />)}</h1>
       <div>
         {data.map((i) => <Hero data={i} />)}
       </div>
       <div>
         <div class="flex">
-          <Title />
           {data.map((i) => <SocialLinks data={i} />)}
         </div>
       </div>
