--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,17 +39,21 @@ const { data } = await res.json();
     class="grid place-items-center min-h-screen bg-black text-white h-72 bg-[radial-gradient(circle_at_bottom_left,_var(--tw-gradient-stops))] from-slate-600 via-black-600 to-black-600"
   >
     <section class="grid place-items-center min-h-screen">
-      <h1 class="text-2xl">{data.map((i) => <Title data={i} />)}</h1>
+      <h1 class="text-2xl">
+        {data.map((i: (typeof data)[0]) => <Title data={i} />)}
+      </h1>
       <div>
-        {data.map((i) => <Hero data={i} />)}
+        {data.map((i: (typeof data)[0]) => <Hero data={i} />)}
       </div>
       <div>
         <div class="flex">
-          {data.map((i) => <SocialLinks data={i} />)}
+          {data.map((i: (typeof data)[0]) => <SocialLinks data={i} />)}
         </div>
       </div>
       <footer class="flex text-sm">
-        <span class="ml-1 mr-1">{data.map((i) => <Title data={i} />)}</span>
+        <span class="ml-1 mr-1"
+          >{data.map((i: (typeof data)[0]) => <Title data={i} />)}</span
+        >
         <span class="ml-1 mr-1">&copy;</span>
         <span class="ml-1 mr-1">
           <script is:inline>
