--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -8,17 +8,17 @@ type Props = {
   };
 };
 
+import pixelSteph from "../assets/images/pixelsteph.png";
+
 const { data } = Astro.props;
-console.log("check data hero", data);
-console.log("check data status", data.status);
 ---
 
-<div>
+<div style="text-align: center;">
   {
     data.status === "enabled" && (
       <img
-        src={data.link}
-        class="object-cover object-center rounded-full h-128 border-4"
+        src={pixelSteph.src}
+        style="width: 150px; height: auto; border: 2px solid #c0c0c0; margin: 0 auto;"
         alt="hero"
       />
     )
