counter on guestbook

--- a/src/pages/guestbook.astro
+++ b/src/pages/guestbook.astro
@@ -247,9 +247,12 @@ const pageTitle = "Sign My Guestbook";
                 </div>
 
                 <div class="webring-widget">
-                    <b>Retro Webring</b><br />
-                    [ <a href="#">Prev</a> | <a href="#">Next</a> ]<br />
-                    [ <a href="#">List Sites</a> ]
+                    <b>Visitor Counter</b><br />
+                    <div
+                        style="border: 2px inset #808080; background: black; color: red; font-family: 'Courier New', monospace; font-size: 14px; margin-top: 5px; letter-spacing: 3px; padding: 2px;"
+                    >
+                        082638
+                    </div>
                 </div>
 
                 <br />
