--- a/src/pages/guestbook.astro
+++ b/src/pages/guestbook.astro
@@ -176,8 +176,8 @@ const pageTitle = "Sign My Guestbook";
                 color: #00ff00;
                 font-family: "Courier New", Courier, monospace;
             }
-            input,
-            textarea {
+            .guestbook-form input,
+            .guestbook-form textarea {
                 width: 100%;
                 padding: 5px;
                 background-color: #000;
