--- a/src/pages/guestbook.astro
+++ b/src/pages/guestbook.astro
@@ -2,6 +2,7 @@
 import Hero from "../components/Hero.astro";
 import SocialLinks from "../components/SocialLinks.astro";
 import Title from "../components/Title.astro";
+import VisitorCounter from "../components/VisitorCounter.astro";
 
 // HERO DATA
 const heroData = {
@@ -245,14 +246,7 @@ const pageTitle = "Sign My Guestbook";
                     }
                 </div>
 
-                <div class="webring-widget">
-                    <b>Visitor Counter</b><br />
-                    <div
-                        style="border: 2px inset #808080; background: black; color: red; font-family: 'Courier New', monospace; font-size: 14px; margin-top: 5px; letter-spacing: 3px; padding: 2px;"
-                    >
-                        082638
-                    </div>
-                </div>
+                <VisitorCounter />
 
                 <br />
                 <img
