--- a/src/pages/guestbook.astro
+++ b/src/pages/guestbook.astro
@@ -267,6 +267,11 @@ const pageTitle = "Sign My Guestbook";
                         data-netlify="true"
                         id="gbForm"
                     >
+                        <input
+                            type="hidden"
+                            name="form-name"
+                            value="guestbook"
+                        />
                         <div class="form-group">
                             <label for="name">Name:</label>
                             <input type="text" id="name" name="name" required />
