--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ const data = [
   {
     name: "LinkedIn",
     icon: "fab fa-linkedin fa-2x",
-    link: "",
+    link: "https://www.linkedin.com/in/stephangriesel/",
     status: "disabled",
   },
   {
@@ -301,7 +301,7 @@ const pageTitle = heroData.name;
           </div>
 
           <div style="font-size: 10px; color: #666;">
-            Last Updated: {new Date().toLocaleDateString()}<br />
+            Last Updated: {new Date().toLocaleDateString("en-GB")}<br />
             &copy; 1999-2025 Stephan Griesel. All rights reserved.
           </div>
         </center>
