change to sheetdb

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -229,7 +229,7 @@ const pageTitle = heroData.name;
       <div class="main-content">
         <div class="marquee-box">
           <marquee
-            >*** WELCOME TO STEPHAN GRIESEL'S HOMEPAGE *** UPDATED DEC 10, 2025
+            >*** WELCOME TO STEPHAN GRIESEL'S HOMEPAGE *** UPDATED DEC 11, 2025
             *** SIGN MY GUESTBOOK! ***</marquee
           >
         </div>
@@ -248,19 +248,19 @@ const pageTitle = heroData.name;
             <th>Update</th>
           </tr>
           <tr>
+            <td>Dec 11</td>
+            <td>
+              Added a <b>Real Visitor Counter</b> and upgraded the <b
+                >Guestbook</b
+              > to save entries to Google Sheets!
+            </td>
+          </tr>
+          <tr>
             <td>Dec 10</td>
             <td
               >Redesigned the site with a cool new layout! Added "About Me"
               section.</td
             >
-          </tr>
-          <tr>
-            <td>Dec 08</td>
-            <td>Uploaded new photos to the gallery.</td>
-          </tr>
-          <tr>
-            <td>Nov 25</td>
-            <td>Fixed the guestbook link. Please sign it!</td>
           </tr>
         </table>
 
