--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -229,8 +229,9 @@ const pageTitle = heroData.name;
       <div class="main-content">
         <div class="marquee-box">
           <marquee
-            >*** WELCOME TO STEPHAN GRIESEL'S HOMEPAGE *** UPDATED DEC 11, 2025
-            *** SIGN MY GUESTBOOK! ***</marquee
+            >*** WELCOME TO STEPHAN GRIESEL'S HOMEPAGE *** CREATED IN THE 90'S
+            AND NOT MOBILE RESPONSIVE *** UPDATED DEC 11, 2025 *** SIGN MY
+            GUESTBOOK! ***</marquee
           >
         </div>
 
